# libcore

./: CMakeLists.txt  Doxyfile  README.md  TODO  TODO.md
doc/: coding_standard.md
include/core/: compiler.h  core.h  hash.h  memory.h  platform.h  types.h  union_cast.h
include/core/containers/: dynamic_array.h  dynamic_stack.h  fixed_array.h  fixed_stack.h  freelist.h
include/core/filesystem/: archive.h  file.h  fs_archive.h  fs_file.h  modes.h  root.h
include/core/hashing/: fnv1a.h
include/core/logging/: console_logger.h  log.h
include/core/memory/: arena.h  heap_area.h  linear_allocator.h  new_delete.h  simple_arena.h  stack_allocator.h  stack_area.h  system_allocator.h
include/core/string/: fixed_string.h  string_hash.h
include/core/threading/: condition_variable.h  mutex.h  thread.h  thread_local_storage.h
include/core/time/: hf_timer.h
include/core/util/: event.h  pointer_align.h  union_cast.h
src/core/filesystem/: fs_archive.cc  fs_file.cc  root.cc
src/core/logging/: console_logger.cc  log.cc
src/core/memory/: heap_area.cc  linear_allocator.cc  stack_allocator.cc  system_allocator.cc
src/core/threading/: condition_variable.cc  mutex.cc  thread.cc
src/core/time/: hf_timer.cc
src/core/time/apple/: hf_timer.cc
test/core/: core_test.cc
